creditas-sf/force-app/main/default/objects/ProductAssignedUser__c/ProductAssignedUser__c.object-meta.xml
<CustomObject>
    <label>Usuário por fila</label>
    <nameField>
        <displayFormat>UPF - {0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ProductAssignedUsers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>