creditas-sf/force-app/main/default/objects/ProductAssignedUser__c/fields/AvailableUser__c.field-meta.xml
<CustomField>
    <fullName>AvailableUser__c</fullName>
    <description>Trás a informação de disponibilidade do usuário.</description>
    <formula>User__r.UserAvailable__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Usuário Disponível</label>
    <type>Checkbox</type>
</CustomField>