creditas-sf/force-app/main/default/objects/ProductAssignedUser__c/fields/CustomSetupUser__c.field-meta.xml
<CustomField>
    <fullName>CustomSetupUser__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CustomSetupUser</label>
    <referenceTo>CustomSetup__c</referenceTo>
    <relationshipName>ProductAssignedUsers</relationshipName>
    <type>Lookup</type>
</CustomField>